style collapse button, hlFeed bug fix

--- a/clean-greader-css/main.css
+++ b/clean-greader-css/main.css
@@ -317,7 +317,7 @@ div#floatingTitle div.hlFeed a:hover {
   color: #dd4b39;
   font-style: normal;
   font-size: 9px;
-  padding: 1px 8px;
+  padding: 2px 8px;
 }
 
 /* feed title - feed icon */
@@ -543,6 +543,46 @@ input[type="checkbox"] {
 .claro div.dijitCheckBox:hover {
   background-color: #eee;
 }
+
+/* feed title - collapse icon */
+span.collapseBtn img {
+  content: "";
+  x-background-color: red;
+  width: 13px;
+  height: 12px;
+  display: inline-block;
+  margin: -2px 0px 0 -2px;
+  padding: 0;
+}
+
+span.collapseBtn { 
+  content: "";
+  display: inline-block;
+  position: relative;
+  background-color: #fff;
+  height: 9px;
+  width: 9px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  top: 1px;
+  left: 8px;
+  border-radius: 0px;
+}
+
+span.collapseBtn:after {
+  content: "";
+  display: inline-block;
+  position: relative;
+  top: -6px;
+  left: 2px;
+  height: 0px;
+  width: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+/* feed title - collapse icon (hover) */
+span.collapseBtn:hover,
+span.collapseBtn:hover:after
+{ border-color: #dd4b39; }
 
 /* resize containers button */
 .claro .dijitToolbar .dijitButton .dijitButtonNode:hover {
